<resources>
    <string name="app_name">IntelligentAmbulance</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="signup">signup</string>
    <string name="sighin">sighIn</string>
    <string name="forgot_your_password">Forgot your Password</string>
    <string name="signin">signIn</string>
    <string name="password">password</string>
    <string name="mobile">mobile</string>
    <string name="sighn_in_to_your_account">Sign into your account</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="next">Next</string>
    <string name="otp_verification">otp verification</string>
    <string name="we_will_send_a_one_time_password_on_this_mobile_number">we will send a one time password on this mobile number</string>
    <string name="enter_mobile_number">enter_mobile_number</string>
    <string name="_91">+91</string>
    <string name="_123456789">123456789</string>
    <string name="get_otp">get otp</string>
    <string name="enter_otp_send">enter otp send</string>
    <string name="didn_t_receive_the_otp">didn t receive the otp</string>
    <string name="verify">verify</string>
    <string name="sign_in">Sign in</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="verifiy_with_otp">Verifiy with Otp</string>
    <string name="phone_no">phone number\n</string>
    <string name="username">username\n</string>
    <string name="full_name">full name\n</string>
    <string name="go">register\n</string>
    <string name="already_have_an_account_login">i have a account\n</string>
    <string name="title_activity_main9">MainActivity9</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">logout</string>
    <string name="ambulance_no_team_03">Ambulance no: team 03</string>
    <string name="registration_no_1896">Registration no:1896</string>
    <string name="view_status">View status</string>
    <string name="settings">settings</string>
    <string name="about">About</string>
    <string name="to_overcome_this_delay_in_first_aid_service_this_system_describes_a_solution_that_is_intelligent_ambulance_traffic_automation_which_includes_alerting_and_tracking_mechanism_with_automatic_traffic_light_controlling_system_such_that_the_ambulance_can_achieve_a_free_way_in_order_to_provide_the_first_aid_to_patients_as_fast_as_possible">To overcome this delay in first aid service this system describes a solution that is “Intelligent Ambulance Traffic Automation”which includes alerting and tracking mechanism with automatic traffic light controlling system such that the ambulance can achieve a free way in order to provide the first aid to patients as fast as possible.</string>
    <string name="life_saver">Life saver</string>
</resources>