<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/ambulance2"
        tools:ignore="MissingConstraints" />
    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bkforintro"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/buttonSignIn2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/bksigninbutton"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorprimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/textForgotPassword"/>




    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/sighn_in_to_your_account"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/Email"
        tools:ignore="NotSibling"
        tools:layout_editor_absoluteX="43dp" />


    <TextView
        android:id="@+id/WELCOME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textSignIn"/>

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bkforintput"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/Password"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="45dp" />

   <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bkforintput"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/buttonSignIn2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="43dp" />


</androidx.constraintlayout.widget.ConstraintLayout>